# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/setup-docker-compose/: action.yml
.github/workflows/: ci.yml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
